// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prop  1`] = `
<div>
  <div
    class="nut-cell"
    style="border-radius: 6px; align-items: flex-start;"
  >
    <div
      class="nut-cell__left"
    >
      <div
        class="nut-cell__title"
      >
        URL 跳转
      </div>
    </div>
    <div
      class="nut-cell__extra"
    >
      https://m.jd.com/
    </div>
  </div>
</div>
`;

exports[`prop title extra description test 1`] = `
<div>
  <div
    class="nut-cell"
    data-testid="prop"
    style="border-radius: 6px; align-items: flex-start;"
  >
    <div
      class="nut-cell__left"
    >
      <div
        class="nut-cell__title"
      >
        我是标题
      </div>
      <div
        class="nut-cell__description"
      >
        我是描述
      </div>
    </div>
    <div
      class="nut-cell__extra"
    >
      描述文字
    </div>
  </div>
</div>
`;

exports[`slot default test 1`] = `
<div>
  <div
    class="nut-cell"
    style="border-radius: 6px; align-items: flex-start;"
  >
    <div
      class="nut-cell__left"
    >
      <div
        class="nut-cell__title"
      >
        <div>
          自定义内容
        </div>
      </div>
    </div>
    <div
      class="nut-cell__extra"
    >
      描述文字
    </div>
  </div>
</div>
`;

exports[`slot extra 1`] = `
<div>
  <div
    class="nut-cell"
    style="border-radius: 6px; align-items: flex-start;"
  >
    <div
      class="nut-cell__left"
    >
      <div
        class="nut-cell__title"
      >
        Switch
      </div>
    </div>
    <div
      class="nut-cell__extra"
    >
      <div
        class="nut-switch switch-open  nut-switch-base "
      >
        <div
          class="switch-button"
        />
      </div>
    </div>
  </div>
</div>
`;
